<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".second_server"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/input_name"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_input_name_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_how_many_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/how_many_people" />

        <TextView
            android:id="@+id/tv_how_many_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/how_many_round" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <NumberPicker
            android:id="@+id/number_people"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginLeft="65dp" />

        <NumberPicker
            android:id="@+id/number_round"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginLeft="145dp" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_address"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_address1"
        android:layout_gravity="center"
        android:onClick="createroom_onclick"
        android:text="@string/create_room" />

</LinearLayout>