<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".second_clinet">

    <TextView
        android:id="@+id/tv_input_room_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/input_room_address"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_address1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/et_address2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_dot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/et_address3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/et_address4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/input_name"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_input_name_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bt_address"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_address1"
        android:layout_gravity="center"
        android:onClick="join_room_onclick"
        android:text="@string/join_room" />

</LinearLayout>